--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services' //Adding Firebase to Android App (code provided by console.firebase.google.com)
 }
 
 android {
@@ -34,10 +35,17 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //Adding Firebase to Android App (codes provided by console.firebase.google.com)
+    implementation platform('com.google.firebase:firebase-bom:28.4.2') //Import BoM for the Firebase platform
+    implementation 'com.google.firebase:firebase-database' //when using BoM don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-analytics'  //add dependency for Firebase SDK for Google Analytics
+
+    // Add the dependencies for any other desired Firebase products
+    // https://firebase.google.com/docs/android/setup#available-librarie
 }
