--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.ceon390_projectgroup">
+    package="com.example.ceon390_projectgroup" >
 
     <application
         android:allowBackup="true"
@@ -8,18 +8,35 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CEON390ProjectGroup">
+        android:theme="@style/Theme.CEON390ProjectGroup" >
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.CEON390ProjectGroup.NoActionBar">
+            android:label="MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".LiveActivity"
+            android:exported="false"
+            android:label="LiveActivity" />
+        <activity
+            android:name=".DatabaseActivity"
+            android:exported="false"
+            android:label="DatabaseActivity" />
+        <activity
+            android:name=".DevelopersActivity"
+            android:exported="false"
+            android:label="DevelopersActivity" />
+        <activity
+            android:name=".SettingsActivity"
+            android:exported="false"
+            android:label="SettingsActivity" />
     </application>
 
 </manifest>
