--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ceon390_projectgroup">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,6 +12,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CEON390ProjectGroup">
+        <activity
+            android:name=".DatabaseActivity"
+            android:exported="false"
+            android:label="@string/title_activity_database"
+            android:theme="@style/Theme.CEON390ProjectGroup.NoActionBar" />
+        <activity
+            android:name=".LiveMonitoring"
+            android:exported="false"
+            android:label="@string/title_activity_live_monitoring"
+            android:theme="@style/Theme.CEON390ProjectGroup.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
