--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CEON390ProjectGroup">
         <activity
+            android:name=".SettingsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_settings"
+            android:theme="@style/Theme.CEON390ProjectGroup.NoActionBar" />
+        <activity
             android:name=".DatabaseActivity"
             android:exported="false"
             android:label="@string/title_activity_database"
